@@ -40,6 +40,7 @@ from bzrlib import (
     lru_cache,
     osutils,
     revision as _mod_revision,
+    static_tuple,
     symbol_versioning,
     tsort,
     ui,
@@ -2679,6 +2680,15 @@ class Repository(_RelockDebugMixin):
 
     def _make_parents_provider(self):
         return self
+
+    @needs_read_lock
+    def get_known_graph_ancestry(self, revision_ids):
+        """Return the known graph for a set of revision ids and their ancestors.
+        """
+        st = static_tuple.StaticTuple
+        revision_keys = [st(r_id).intern() for r_id in revision_ids]
+        known_graph = self.revisions.get_known_graph_ancestry(revision_keys)
+        return graph.GraphThunkIdsToKeys(known_graph)
 
     def get_graph(self, other_repository=None):
         """Return the graph walker for this repository format"""
