@@ -44,6 +44,9 @@ API Changes
 Internals
 *********
 
+ * New method ``Repository.get_known_graph_ancestry()``. 
+   (Jelmer Vernooij, #495502)
+
 Testing
 *******
 
